--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,8 @@ classifiers = Development Status :: 4 - Beta,
 # console_scripts =
 #     hello_world = multi_archivo.module:function
 # as well as other entry_points.
-
+console_scripts =
+    multi_archivo = multi_archivo.multi_archivo:main
 
 [files]
 # Add here 'data_files', 'packages' or 'namespace_packages'.
@@ -25,6 +26,8 @@ packages =
     multi_archivo
 # data_files =
 #    share/multi_archivo_docs = docs/*
+install_requires = 
+    PyYAML
 
 [extras]
 # Add here additional requirements for extra features, like:
