Agrego carpeta Ubuntu-dist con script para instalar la aplicación en Ubuntu y el lanzador en Unity"

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ classifiers = Development Status :: 4 - Beta,
 [entry_points]
 # Add here console scripts like:
 # console_scripts =
-#     hello_world = multi_archivo.module:function
+#     hello_world = package.module:function
 # as well as other entry_points.
 console_scripts =
     multi_archivo = multi_archivo.multi_archivo:main
